# porkbun-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/porkbun-dns/: SKILL.md
src/: main.rs
